tests/integration/snapshots/integration__commands__jsonlines__format_multi.snap
---
source: tests/integration/commands/jsonlines.rs
expression: output.snapshot_display()
---
args: ["format", "--parser", "jsonlines"]
status: 0
success: true
stdin ---
{ "a" : 1 }
{ "b" : 2 }
stdout ---
{"a":1}
{"b":2}

stderr ---
