tests/integration/snapshots/integration__commands__jsonlines__format_single.snap
---
source: tests/integration/commands/jsonlines.rs
expression: output.snapshot_display()
---
args: ["format", "--json-lines"]
status: 0
success: true
stdin ---
{ "a" : 1 }
stdout ---
{"a":1}

stderr ---
