tests/integration/snapshots/integration__commands__jsonlines__format_trailing_newline.snap
---
source: tests/integration/commands/jsonlines.rs
expression: output.snapshot_display()
---
args: ["format", "--parser", "jsonlines"]
status: 0
success: true
stdin ---
{ "a" : 1 }

stdout ---
{"a":1}

stderr ---
