tests/integration/snapshots/integration__commands__jsonlines__json_lines_conflicts_with_preferred_width.snap
---
source: tests/integration/commands/jsonlines.rs
expression: output.snapshot_display()
---
args: ["format", "--parser", "jsonlines", "--preferred-width", "100"]
status: 1
success: false
stdin ---
{}
stdout ---

stderr ---
error: the argument '--parser jsonlines' cannot be used with '--preferred-width'

Usage: jjp format --parser jsonlines

For more information, try '--help'.
